--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -6,9 +6,11 @@
   {{#each cssPath as |css|}}
     <link rel="stylesheet" href="{{css}}">
   {{/each}}
+  {{#each scriptPath as |js|}}
+    <script src="{{js}}" defer></script>
+  {{/each}}
 </head>
 <body>
   {{{body}}}
-  <script src="{{scriptPath}}" defer></script>
 </body>
 </html>
