ready for npx-create

--- a/src/assets/css/utils/utils.css
+++ b/src/assets/css/utils/utils.css
@@ -1,3 +1,35 @@
-h1 {
-    color: hotpink;
+html,
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+
+    inline-size: var(--container-full);
+    block-size: var(--container-full);
+}
+
+body {
+    display: grid;
+    grid-template-columns: [edge-start] 1fr [body-start] clamp(0rem, 90vw, 80rem) [body-end] 1fr [edge-end];
+    grid-template-rows: [header-start page-start] var(--size-80) [header-end body-start] 1fr [body-end footer-start] var(--size-32) [footer-end page-end];
+
+    background-image: radial-gradient(oklch(0.969 0.016 293.756), oklch(0.979 0.021 166.113));
+
+    @media (prefers-color-scheme: dark) {
+        background-image: radial-gradient(oklch(0.283 0.141 291.089), oklch(0.262 0.051 172.552));
+    }
+
+    & main {
+        display: grid;
+        grid-template-columns: subgrid;
+        grid-template-rows: subgrid;
+        grid-column: edge;
+        grid-row: page;
+
+        .column-body {
+            grid-column: body;
+        }
+        .row-body {
+            grid-row: body;
+        }
+    }
 }
