--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>{{title}}</title>
-  {{#each cssPath as |css|}}
-    <link rel="stylesheet" href="{{css}}">
-  {{/each}}
-  {{#each scriptPath as |js|}}
-    <script src="{{js}}" defer></script>
-  {{/each}}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+
+    {{#each cssPath as |css|}}
+        <link rel="stylesheet" href="{{css}}">
+    {{/each}}
+    {{#each scriptPath as |js|}}
+        <script src="{{js}}" defer></script>
+    {{/each}}
 </head>
-<body>
-  {{{body}}}
+
+<body hx-boost="true">
+    <main>{{{body}}}</main>
+    {{> confirm-dialog}}
 </body>
+
 </html>
