--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,12 +1,16 @@
 
-@layer reset, theme, utils, component, overwrite;
+@layer reset, theme, utils, components, pages;
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 
+@import url(./utils/reset.css) layer(reset);
+@import url(./utils/theme.css) layer(theme);
 @import url(./utils/utils.css) layer(utils);
+@import url(./utils/space.css) layer(utils);
+@import url(./utils/size.css) layer(utils);
+@import url(./utils/keyframe.css) layer(utils);
+@import url(./utils/easing.css) layer(utils);
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-}
+@import url(./components/htmx-helper.css) layer(components);
+@import url(./components/button.css) layer(components);
+@import url(./components/dialog.css) layer(components);
